# Convert_RGB565_JPEG

./: .gitignore  CMakeLists.txt  encode.c  img.h  jdata_conf.c  jdata_conf.h  jmorecfg.h  main.c  main.h
